2005-12-15  Adele Peterson  <adele@apple.com>

        Test for <rdar://problem/4381360>, http://bugzilla.opendarwin.org/show_bug.cgi?id=6100
        REGRESSION: Focus ring on contenteditable div outlines text in overflow area instead of div (6100)

        * fast/overflow/overflow-focus-ring-expected.checksum: Added.
        * fast/overflow/overflow-focus-ring-expected.png: Added.
        * fast/overflow/overflow-focus-ring-expected.txt: Added.
        * fast/overflow/overflow-focus-ring.html: Added.

2005-12-15  Darin Adler  <darin@apple.com>

        - updated test result -- this test now succeeds due to some recent change

        * dom/xhtml/level2/html/HTMLTextAreaElement12-expected.txt: Regenerated.

2005-12-14  Beth Dakin  <bdakin@apple.com>

        Reviewed by Eric.

	This layout test is sort of for <rdar://problem/4374783> 10.4.4 
	REGRESSION: caret disappears when typing at the bottom of a 
	scrollable textarea.

	It does not address the fundamental problem with that bug,
	but it does make sure we ignore negative line-height in
	textareas.

        * fast/forms/negativeLineHeight-expected.checksum: Added.
        * fast/forms/negativeLineHeight-expected.png: Added.
        * fast/forms/negativeLineHeight-expected.txt: Added.
        * fast/forms/negativeLineHeight.html: Added.

2005-12-14  Mitz Pettel  <opendarwin.org@mitzpettel.com>

         Layout test for <http://bugzilla.opendarwin.org/show_bug.cgi?id=5921>
         Hit-testing text in overflows does not take scrolling into account.
 
         * fast/overflow/overflow-text-hit-testing-expected.checksum: Added.
         * fast/overflow/overflow-text-hit-testing-expected.png: Added.
         * fast/overflow/overflow-text-hit-testing-expected.txt: Added.
         * fast/overflow/overflow-text-hit-testing.html: Added.

2005-12-13  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        Test case for http://bugzilla.opendarwin.org/show_bug.cgi?id=5465