@@ -1,0 +1,15 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock (anonymous) at (0,0) size 784x36
+        RenderText {TEXT} at (0,0) size 741x36
+          text run at (0,0) width 741: "This test makes sure we don't crash when trying to get the index of an option element that has no corresponding select"
+          text run at (0,18) width 53: "element."
+      RenderBlock {DIV} at (0,36) size 784x36
+        RenderText {TEXT} at (0,0) size 82x18
+          text run at (0,0) width 82: "Test Passed. "
+        RenderBR {BR} at (0,0) size 0x0
+        RenderText {TEXT} at (0,18) size 370x18
+          text run at (0,18) width 370: "Index for option element with no corresponding select is: 0"
