@@ -1,0 +1,14 @@
+<html>
+<head>	
+<script>
+function Crash() {
+    var x = new Option('t','v');
+    document.getElementById('result').innerHTML = "Test Passed. <BR/> Index for option element with no corresponding select is: " + x.index;
+}
+</script>
+</head>
+<body onload="Crash()">
+This test makes sure we don't crash when trying to get the index of an option element that has no corresponding select element.
+<div id="result">Test Failed</div>
+</body>
+</html>
