@@ -1,3 +1,14 @@
+2005-12-15  Adele Peterson  <adele@apple.com>
+
+        Reviewed by John.
+
+        - Fix for <rdar://problem/4258232> Crash in HTMLOptionElementImpl::index when option element has no corresponding select - http://www.mattkruse.com/javascript/datadumper/
+
+        Test: fast/forms/option-index.html
+
+        * khtml/html/html_formimpl.cpp:
+        (DOM::HTMLOptionElementImpl::index): nil check for select element.
+
 2005-12-15  Eric Seidel  <eseidel@apple.com>
 
         Reviewed by darin.
