@@ -1,5 +1,14 @@
 2005-12-15  Adele Peterson  <adele@apple.com>
 
+        Test for <rdar://problem/4258232> Crash in HTMLOptionElementImpl::index when option element has no corresponding select - http://www.mattkruse.com/javascript/datadumper/
+
+        * fast/forms/option-index-expected.checksum: Added.
+        * fast/forms/option-index-expected.png: Added.
+        * fast/forms/option-index-expected.txt: Added.
+        * fast/forms/option-index.html: Added.
+
+2005-12-15  Adele Peterson  <adele@apple.com>
+
         Test for <rdar://problem/4381360>, http://bugzilla.opendarwin.org/show_bug.cgi?id=6100
         REGRESSION: Focus ring on contenteditable div outlines text in overflow area instead of div (6100)
 
